demo/my-config-demo-pod.yaml
apiVersion: v1 
kind: Pod 
metadata:
  name: configmap-demo-pod 
  namespace: mumu
spec:
  containers:
    - name: demo
      image: nginx 
      volumeMounts: 
      - name: config
        mountPath: "/config"
        readOnly: true 
  volumes:
  - name: config 
    configMap:
      name: configmap-demo 
      items:
      - key: "redis.properties"
        path: "redis.properties"
