demo/my-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: slash-nginx
  namespace: mumu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:1.19
        name: slash-nginx
#        volumeMounts:
#        - mountPath: "/usr/share/nginx/html"
#          name: nginx-data
#      volumes:
#      - name: nginx-data
#        persistentVolumeClaim:
#          claimName: myclaim
