demo/my-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: my-service
  namespace: mumu
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
